--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,3 @@
 [webservers]
-ec2-3-111-30-220.ap-south-1.compute.amazonaws.com
-ec2-43-204-147-255.ap-south-1.compute.amazonaws.com
-
+ec2-13-233-158-139.ap-south-1.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
+ec2-65-2-37-41.ap-south-1.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
