--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,11 @@
+[localhost]
+ec2-13-126-138-212.ap-south-1.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
+
 [aws_linux]
-ec2-13-235-80-21.ap-south-1.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
+ec2-35-154-130-188.ap-south-1.compute.amazonaws.com ansible_user=ec2-user ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
 
 [debian]
-ec2-13-233-246-155.ap-south-1.compute.amazonaws.com ansible_user=admin ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
+ec2-15-207-249-4.ap-south-1.compute.amazonaws.com ansible_user=admin ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
 
 [ubuntu]
-ec2-65-1-134-16.ap-south-1.compute.amazonaws.com ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
+ec2-65-0-135-211.ap-south-1.compute.amazonaws.com ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/as699/OneDrive/Desktop/aayu_DevOps/cloud/aayushvm.pem
